Mahout Change Log

Release 1.0 - unreleased

  MAHOUT-1548: Fix broken links in quickstart webpage (Andrew Palumbo via ssc)

  MAHOUT-1542: Tutorial for playing with Mahout's Spark shell (ssc)

  MAHOUT-1533: Remove Frequent Pattern Mining (ssc)

  MAHOUT-1532: Add solve() function to the Scala DSL (ssc)

  MAHOUT-1530: Custom prompt and welcome message for the Spark Shell (ssc)

  MAHOUT-1527: Fix wikipedia classifier example (Andrew Palumbo via ssc)

  MAHOUT-1526: Ant file in examples (ssc)

  MAHOUT-1523: Remove @author tags in sparkbindings (ssc)

  MAHOUT-1521: lucene2seq - Error trying to load data from stored field (when non-indexed) (Terry Blankers via frankscholten)

  MAHOUT-1520: Fix links in Mahout website documentation (Saleem Ansari via smarthi)

  MAHOUT-1519: Remove StandardThetaTrainer (Andrew Palumbo via ssc)

  MAHOUT-1517: Remove casts to int in ALSWRFactorizer (ssc)
  
  MAHOUT-1513: Deprecate Canopy Clustering (ssc)

  MAHOUT-1511: Renaming core to mrlegacy (frankscholten)

  MAHOUT-1510: Goodbye MapReduce (ssc)

  MAHOUT-1509: Invalid URL in link from "quick start/basics" page (Nick Martin, smarthi)

  MAHOUT-1508: Performance problems with sparse matrices (ssc)

  MAHOUT-1504: Enable/fix thetaSummer job in TrainNaiveBayesJob (Andrew Palumbo, smarthi)

  MAHOUT-1503: TestNaiveBayesDriver fails in sequential mode (Andrew Palumbo, smarthi)

  MAHOUT-1502: Update Naive Bayes Webpage to Current Implementation (Andrew Palumbo via ssc)

  MAHOUT-1501: ClusterOutputPostProcessorDriver has private default constructor (ssc)

  MAHOUT-1498: DistributedCache.setCacheFiles in DictionaryVectorizer overwrites jars pushed using oozie (Sergey via ssc)

  MAHOUT-1497: mahout resplit not producing splited files (ssc)

  MAHOUT-1496: Create a website describing the distributed ALS recommender (Jian Wang via ssc)

  MAHOUT-1491: Spectral KMeans Clustering doesn't clean its /tmp dir and fails when seeing it again (smarthi)
