@@ -2,6 +2,8 @@ Mahout Change Log
 
 Release 1.0 - unreleased
 
+  MAHOUT-1554: Provide more comprehensive classification statistics (Karol Grzegorczyk via ssc)
+
   MAHOUT-1548: Fix broken links in quickstart webpage (Andrew Palumbo via ssc)
 
   MAHOUT-1542: Tutorial for playing with Mahout's Spark shell (ssc)
